fix bug in chrome for ios in search bar alignment closing #250

--- a/public/style/responsive2-main.css
+++ b/public/style/responsive2-main.css
@@ -217,7 +217,7 @@ body.parksforward.responsive2 {
         overflow: hidden;
         width: 140px;
         position: absolute;
-        bottom: 0;
+        top: 0;
         right: 0;
         border-radius: 0px 4px 4px 0px; }
         @media screen and (max-width: 720px)  {
