--- a/sass/_block-search-box.scss
+++ b/sass/_block-search-box.scss
@@ -129,7 +129,7 @@
       overflow:hidden;
       width:140px;
       position:absolute;
-      bottom:0;
+      top:0;
       right:0;
       border-radius: 0px $border-radius $border-radius 0px;
 
